--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>EarthDollar Block Explorer</title>
+  <title>EarthDollar Block Explorerff</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/main.css">
@@ -79,7 +79,7 @@
     </footer>
 </div>
 <script>
-$("#modaltext").text( 'geth --rpc --rpccorsdomain "'+ window.location.protocol + '//' + window.location.host + '"' );
+$("#modaltext").text( 'ged --rpc --rpccorsdomain "'+ window.location.protocol + '//' + window.location.host + '"' );
 </script>
 </body>
 </html>
